--- a/190311_jsExercises.html
+++ b/190311_jsExercises.html
@@ -217,6 +217,7 @@
 		Should return "20 8 5 19 21 14 19 5 20 19 5 20 19 1 20 20 23 5 12 22 5 15 3 12 15 3 11" (as a string)
 		*/
 
+		/*
 		function alphabetPosition(text) {
 			let res = [];
 			let alpha = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", 
@@ -238,8 +239,7 @@
 
 		//alternate solution
 		let alphabetPosition = (text) => text.toUpperCase().replace(/[^A-Z]/g, '').split('').map(ch => ch.charCodeAt(0) - 64).join(' ');
-		console.log(alphabetPosition("The sunset sets at twelve o' clock."));
-		
+
 		//alternate solution
 		function alphabetPosition(text) {
 		  const letters = 'abcdefghijklmnopqrstuvwxyz';
@@ -250,7 +250,52 @@
 		             .map(t => letters.indexOf(t)+1 || '')
 		             .join(' ');
 		}
-		console.log(alphabetPosition("The sunset sets at twelve o' clock."));
+		*/
+//--------------------------------------------------------------------------------------------------------------------------
+	/*
+	https://www.codewars.com/kata/5a946d9fba1bb5135100007c/train/javascript
+	Task :
+	Given a List [] of n integers , find minimum mumber to be inserted in a list, so that sum of all elements of list should equal the closest prime number.
+
+	Notes
+	List size is at least 2.
+
+	List's numbers will only positives (n > 0).
+
+	Repetition of numbers in the list could occur.
+
+	The newer list's sum should equal the closest prime number.
+
+	Input >> Output Examples
+	1- minimumNumber ({3,1,2}) ==> return (1)
+	Explanation:
+	Since , the sum of the list's elements equal to (6) , the minimum number to be inserted to transform the sum to prime number is (1) , which will make *the sum of the List** equal the closest prime number (7)* .
+	*/
+
+	function minimumNumber(numbers){
+  		let total = numbers.reduce((acc, val) => {
+  			return acc + val;
+  		})
+
+  	   let counter = 0;
+  	   if(total + 1 !== prime){
+  	   	  	counter++;
+  	   	  	total++;
+  	   	  }else{
+  	   	  	counter++;
+  	   	  }
+  	   	  return counter;
+  	  
+	}
+	console.log(minimumNumber([3,1,2]));
+
+	/*
+	My thinking:
+	1. use reduce to add the numbers in the array
+	2. check to see if the 'total' (from adding numbers in array) plus 1 is not prime
+	3. if it is not prime, increase total by 1 and increase counter variable by 1
+	4. if it is prime, add 1 to counter, and return it
+	*/
 //--------------------------------------------------------------------------------------------------------------------------
 	</script>
 </head>
