--- a/190311_jsExercises.html
+++ b/190311_jsExercises.html
@@ -217,7 +217,7 @@
 		Should return "20 8 5 19 21 14 19 5 20 19 5 20 19 1 20 20 23 5 12 22 5 15 3 12 15 3 11" (as a string)
 		*/
 
-		/*
+		//Aaron's Solution
 		function alphabetPosition(text) {
 			let res = [];
 			let alpha = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", 
@@ -237,7 +237,7 @@
 		}
 		console.log(alphabetPosition("The sunset sets at twelve o' clock."));
 
-		//alternate solution
+		/*alternate solution
 		let alphabetPosition = (text) => text.toUpperCase().replace(/[^A-Z]/g, '').split('').map(ch => ch.charCodeAt(0) - 64).join(' ');
 
 		//alternate solution
